Add support for accountize method which permit to rationalize the work
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1534 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -591,6 +591,8 @@ eng:
       entity:
         #>active: 'Actif'
         #>activity_code: 'Code d''activité'
+        #>attorney: '(((ATTORNEY)))'
+        #>attorney_account_id: '(((ATTORNEY_ACCOUNT_ID)))'
         #>authorized_payments_count: 'Nombre de règlements autorisés'
         #>born_on: 'Date de naissance'
         #>cashes: 'Comptes bancaires'
@@ -829,6 +831,7 @@ eng:
         creator: 'Creator'
         creator_id: 'Creator'
         id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>lines: 'Lignes d''inventaire'
         lock_version: 'Version'
         #>number: 'Numéro'
@@ -883,6 +886,7 @@ eng:
         #>downpayment_amount: 'Montant de l''acompte'
         #>has_downpayment: 'A un acompte'
         id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>lines: 'Lignes de facture'
         lock_version: 'Version'
         #>lost: 'En perte'
@@ -1012,9 +1016,13 @@ eng:
         #>number: 'Numéro'
         #>position: 'Position'
         #>printed_on: 'Datée du'
+        #>purchase_payment_parts: 'Parties de règlement d''achat'
+        #>purchase_payments: 'Règlements d''achat'
         #>resource: 'Origine'
         #>resource_id: 'Origine'
         #>resource_type: 'Origine'
+        #>sale_payment_parts: 'Parties de règlement'
+        #>sale_payments: 'Règlements'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
@@ -1507,6 +1515,7 @@ eng:
         #>updater_id: 'Modificateur'
         #>with_accounting: 'Comptabiliser les règlements'
       purchase_payment_part:
+        #>accounted_at: '(((ACCOUNTED_AT)))'
         #>amount: 'Montant'
         #>company: 'Société'
         #>company_id: 'Société'
@@ -1517,6 +1526,8 @@ eng:
         #>expense: 'Dépense'
         #>expense_id: 'Dépense'
         #>id: 'ID'
+        #>journal_record: 'Pièces comptables'
+        #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>payment: 'Règlement'
         #>payment_id: 'Règlement'
@@ -1575,6 +1586,7 @@ eng:
         #>invoice_contact_id: 'Adresse pour la facture'
         #>invoiced: 'Facturée'
         #>invoices: 'Factures'
+        #>journal_record_id: 'Pièce comptable'
         #>letter_format: 'Devis au format lettre'
         #>lines: 'Lignes de vente'
         lock_version: 'Version'
@@ -1723,6 +1735,8 @@ eng:
         creator_id: 'Creator'
         #>draft_mode: 'Mode brouillard'
         #>embankable_payments: 'Règlements encaissables'
+        #>embankables_account: '(((EMBANKABLES_ACCOUNT)))'
+        #>embankables_account_id: '(((EMBANKABLES_ACCOUNT_ID)))'
         #>entities: 'Personnes'
         id: 'ID'
         lock_version: 'Version'
@@ -1736,6 +1750,7 @@ eng:
         #>with_commission: 'Inclure une commission'
         #>with_embankment: 'Utiliser les remises en banque'
       sale_payment_part:
+        #>accounted_at: '(((ACCOUNTED_AT)))'
         #>amount: 'Montant attribué à la vente'
         company: 'Company'
         company_id: 'Company'
@@ -1747,6 +1762,8 @@ eng:
         #>expense_id: 'Dépense'
         #>expense_type: 'Type de dépense'
         id: 'ID'
+        #>journal_record: 'Pièces comptables'
+        #>journal_record_id: 'Pièce comptable'
         lock_version: 'Version'
         #>payment: 'Règlement'
         #>payment_id: 'Règlement'
@@ -1990,6 +2007,7 @@ eng:
         updater: 'Updater'
         updater_id: 'Updater'
       tax_declaration:
+        #>accounted_at: '(((ACCOUNTED_AT)))'
         #>acquisition_amount: 'Montant des acquisition'
         #>address: 'Adresse du service destinataire'
         #>amount: 'TVA totale'
@@ -2006,6 +2024,7 @@ eng:
         #>financialyear: 'Période considérée'
         #>financialyear_id: 'Période considérée'
         id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         lock_version: 'Version'
         #>nature: 'Régime de la déclaration'
         #>paid_amount: 'TVA déductible'
@@ -2087,6 +2106,7 @@ eng:
         creator: 'Creator'
         creator_id: 'Creator'
         id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         label: 'Label'
         lock_version: 'Version'
         #>parts_amount: 'Montant payé'
@@ -2218,6 +2238,7 @@ eng:
         less_than: '{{attribute}} must be less than {{count}}'
         less_than_or_equal_to: '{{attribute}} must be less than or equal to {{count}}'
         not_a_number: '{{attribute}} is not a number'
+        #>nothing_to_pay: 'Il n''y a rien à payer. Si vous voulez enregistrer un acompte, n''oubliez pas de le préciser.'
         odd: '{{attribute}} must be odd'
         #>posterior: 'La date {{attribute}} doit être postérieure à {{to}}'
         #>record_has_been_already_validated: 'La pièce a été validée et ne peut plus être modifiée'
@@ -2260,7 +2281,6 @@ eng:
           #>out_of_financialyear: 'La pièce doit être saisie durant l''exercice'
           #>unbalanced: 'La pièce n''est pas équilibrée'
         payment_part:
-          #>nothing_to_pay: 'Il n''y a rien à payer. Si vous voulez enregistrer un acompte, n''oubliez pas de le préciser.'
         price:
           #>already_defined: 'Un prix a déjà été défini pour cette liste de prix et ce produit'
           #>range_overlap: 'L''intervalle de quantité en chevauche un autre (de {{min}} à {{max}})'
