--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -586,6 +586,8 @@ spa:
       entity:
         #>active: 'Actif'
         #>activity_code: 'Code d''activité'
+        #>attorney: '(((ATTORNEY)))'
+        #>attorney_account_id: '(((ATTORNEY_ACCOUNT_ID)))'
         #>authorized_payments_count: 'Nombre de règlements autorisés'
         #>born_on: 'Date de naissance'
         #>cashes: 'Comptes bancaires'
@@ -823,6 +825,7 @@ spa:
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
         #>id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>lines: 'Lignes d''inventaire'
         #>lock_version: 'Version'
         #>number: 'Numéro'
@@ -877,6 +880,7 @@ spa:
         #>downpayment_amount: 'Montant de l''acompte'
         #>has_downpayment: 'A un acompte'
         #>id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>lines: 'Lignes de facture'
         #>lock_version: 'Version'
         #>lost: 'En perte'
@@ -1005,9 +1009,13 @@ spa:
         #>number: 'Numéro'
         #>position: 'Position'
         #>printed_on: 'Datée du'
+        #>purchase_payment_parts: 'Parties de règlement d''achat'
+        #>purchase_payments: 'Règlements d''achat'
         #>resource: 'Origine'
         #>resource_id: 'Origine'
         #>resource_type: 'Origine'
+        #>sale_payment_parts: 'Parties de règlement'
+        #>sale_payments: 'Règlements'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
@@ -1500,6 +1508,7 @@ spa:
         #>updater_id: 'Modificateur'
         #>with_accounting: 'Comptabiliser les règlements'
       purchase_payment_part:
+        #>accounted_at: '(((ACCOUNTED_AT)))'
         #>amount: 'Montant'
         #>company: 'Société'
         #>company_id: 'Société'
@@ -1510,6 +1519,8 @@ spa:
         #>expense: 'Dépense'
         #>expense_id: 'Dépense'
         #>id: 'ID'
+        #>journal_record: 'Pièces comptables'
+        #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>payment: 'Règlement'
         #>payment_id: 'Règlement'
@@ -1568,6 +1579,7 @@ spa:
         #>invoice_contact_id: 'Adresse pour la facture'
         #>invoiced: 'Facturée'
         #>invoices: 'Factures'
+        #>journal_record_id: 'Pièce comptable'
         #>letter_format: 'Devis au format lettre'
         #>lines: 'Lignes de vente'
         #>lock_version: 'Version'
@@ -1716,6 +1728,8 @@ spa:
         #>creator_id: 'Créateur'
         #>draft_mode: 'Mode brouillard'
         #>embankable_payments: 'Règlements encaissables'
+        #>embankables_account: '(((EMBANKABLES_ACCOUNT)))'
+        #>embankables_account_id: '(((EMBANKABLES_ACCOUNT_ID)))'
         #>entities: 'Personnes'
         #>id: 'ID'
         #>lock_version: 'Version'
@@ -1729,6 +1743,7 @@ spa:
         #>with_commission: 'Inclure une commission'
         #>with_embankment: 'Utiliser les remises en banque'
       sale_payment_part:
+        #>accounted_at: '(((ACCOUNTED_AT)))'
         #>amount: 'Montant attribué à la vente'
         company: 'Compañía'
         company_id: 'Compañía'
@@ -1740,6 +1755,8 @@ spa:
         #>expense_id: 'Dépense'
         #>expense_type: 'Type de dépense'
         #>id: 'ID'
+        #>journal_record: 'Pièces comptables'
+        #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>payment: 'Règlement'
         #>payment_id: 'Règlement'
@@ -1982,6 +1999,7 @@ spa:
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
       tax_declaration:
+        #>accounted_at: '(((ACCOUNTED_AT)))'
         #>acquisition_amount: 'Montant des acquisition'
         #>address: 'Adresse du service destinataire'
         #>amount: 'TVA totale'
@@ -1998,6 +2016,7 @@ spa:
         #>financialyear: 'Période considérée'
         #>financialyear_id: 'Période considérée'
         #>id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>nature: 'Régime de la déclaration'
         #>paid_amount: 'TVA déductible'
@@ -2079,6 +2098,7 @@ spa:
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
         #>id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>label: 'Libellé'
         #>lock_version: 'Version'
         #>parts_amount: 'Montant payé'
@@ -2208,6 +2228,7 @@ spa:
         #>less_than: '{{attribute}} doit être inférieur à {{count}}'
         #>less_than_or_equal_to: '{{attribute}} doit être inférieur ou égal à {{count}}'
         #>not_a_number: '{{attribute}} n''est pas un nombre'
+        #>nothing_to_pay: 'Il n''y a rien à payer. Si vous voulez enregistrer un acompte, n''oubliez pas de le préciser.'
         #>odd: '{{attribute}} doit être pair'
         #>posterior: 'La date {{attribute}} doit être postérieure à {{to}}'
         #>record_has_been_already_validated: 'La pièce a été validée et ne peut plus être modifiée'
@@ -2251,7 +2272,6 @@ spa:
           #>out_of_financialyear: 'La pièce doit être saisie durant l''exercice'
           #>unbalanced: 'La pièce n''est pas équilibrée'
         payment_part:
-          #>nothing_to_pay: 'Il n''y a rien à payer. Si vous voulez enregistrer un acompte, n''oubliez pas de le préciser.'
         price:
           #>already_defined: 'Un prix a déjà été défini pour cette liste de prix et ce produit'
           #>range_overlap: 'L''intervalle de quantité en chevauche un autre (de {{min}} à {{max}})'
