--- a/config/locales/fra/pack.management.yml
+++ b/config/locales/fra/pack.management.yml
@@ -533,6 +533,7 @@ fra:
       _sale_payment_mode_form:
         accountancy: 'Comptabilisation'
         commission: 'Commission'
+        embankment: 'Remise en banque'
         general: 'Description générale'
       sale_payment_mode_update:
         title: 'Modifier le mode de règlement : {{name}}'
@@ -661,13 +662,13 @@ fra:
       transport_create:
         title: 'Ajout d''un nouveau transport'
         #>info: # Potentially missing translation
+      transport_deliveries:
+        title: 'Livraisons du transport'
       _transport_deliveries:
         add: 'Ajouter la livraison au transport'
         add_delivery: 'Ajouter une livraison'
         back: 'Valider et revenir à la liste des transports'
         delivery: 'Livraison'
-      transport_deliveries:
-        title: 'Livraisons du transport'
       _transport_form:
         info: 'Renseignez les informations du transport'
       transport_update:
