--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -466,6 +466,8 @@ fra:
     purchase_payment:
       label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} pour {{payee}}'
       to_accountancy: '[{{resource}} {{number}}] {{detail}}'
+    purchase_payment_part:
+      to_accountancy: '[{{resource}}] {{detail}}'
     sale_order:
       label:
         estimate: 'Devis N°{{number}}'
@@ -492,6 +494,8 @@ fra:
     sale_payment:
       label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{payer}}'
       to_accountancy: '[{{resource}} {{number}}] {{detail}}'
+    sale_payment_part:
+      to_accountancy: '[{{resource}}] {{detail}}'
     sequence:
       periods:
         cweek: 'Semaine'
