--- a/config/locales/fra/pack.management.yml
+++ b/config/locales/fra/pack.management.yml
@@ -423,11 +423,11 @@ fra:
         letter: 'Lettre'
       sale_order_line_create:
         title: 'Ajout d''une ligne de produit'
-      _sale_order_line_form:
+      _sale_order_line_form: &sale_order_line_form
         change_price: 'Changer le prix unitaire'
-        discount: 'Remise (en %)' #!
         give_discount: 'Octroyer une remise'
         infos: 'Choisissez le produit et la quantité'
+      _sale_order_line_detail_form: *sale_order_line_form
       sale_order_line_informations:
         contact: 'à l''adresse'
         from_date: 'Du '
@@ -437,15 +437,17 @@ fra:
       _sale_order_line_informations:
         no_tracking: 'Aucun lot'
         tracking: 'Lot '
-      _sale_order_line_row_form:
-        discount: 'Réduction (en %)'
+      _sale_order_line_row_form: &sale_order_line_row_form
+        discount: 'Réduc. (%)'
         from: 'Du numéro' #!
         location: 'Lieu de stockage'
         product: 'Produit'
         quantity: 'Quantité'
-        title: 'Saisie rapide'
+        title: 'Saisie rapide' 
+        unit: Unité
         to: 'au' #!
         valid: 'Valider'
+      _sale_order_line_detail_row_form: *sale_order_line_row_form
       _sale_order_line_stocks:
         line_stock: 'Lieu de stockage: {{location}}, quantité disponible: {{virtual_q}}'
       _sale_order_line_tracking:
